# GolfIt-FENTRY

./: .gitignore  CMakeLists.txt  README.md  readme.md
GolfSDK/: NameCollisions.inl  PropertyFixup.hpp  SDK.hpp  UnrealContainers.hpp
GolfSDK/SDK/: AC_EventAttachment_classes.hpp  AC_EventAttachment_functions.cpp  AC_EventAttachment_parameters.hpp  A_DebugBallTrails_classes.hpp  A_DebugBallTrails_functions.cpp  A_DebugBallTrails_parameters.hpp  A_DebugSpawnPoint_classes.hpp  A_DebugSpawnPoint_functions.cpp  A_DebugSpawnPoint_parameters.hpp  A_DynamicMeshBase_classes.hpp  A_GolfBallCustomizer_classes.hpp  A_GolfBallCustomizer_functions.cpp  A_GolfBallCustomizer_parameters.hpp  ActorLayerUtilities_classes.hpp  ActorLayerUtilities_functions.cpp  ActorLayerUtilities_parameters.hpp  ActorLayerUtilities_structs.hpp  ActorSequence_classes.hpp  ActorSequence_structs.hpp  AnimGraphRuntime_classes.hpp  AnimGraphRuntime_functions.cpp  AnimGraphRuntime_parameters.hpp  AnimGraphRuntime_structs.hpp  AnimationCore_classes.hpp  AnimationCore_structs.hpp  AnimationSharing_classes.hpp  AnimationSharing_functions.cpp  AnimationSharing_parameters.hpp  AnimationSharing_structs.hpp  AreaMaterialChanges_structs.hpp  AssetCollectionSingle_classes.hpp  AssetCollection_classes.hpp  AssetRegistry_classes.hpp  AssetRegistry_functions.cpp  AssetRegistry_parameters.hpp  AssetRegistry_structs.hpp  AssetTags_classes.hpp  AssetTags_functions.cpp  AssetTags_parameters.hpp  AssetTags_structs.hpp  (+1158 more)
ImGui/: imgui_draw.cpp
Libraries/RendererHook/: OverlayBase.cpp
OHook/: ActorCache.cpp  ActorCache.h  ColorManager.cpp  ColorManager.h  ComponentLogger.cpp  ComponentLogger.h  Configuration.cpp  Configuration.h  DetourManager.cpp  DetourManager.h  TfdOverlay.cpp  TfdOverlay.h  Utils.h  dllmain.cpp  includes.h
OHook/Core/: Configuration.cpp  Configuration.h  DLLAuth.cpp  DLLAuth.h  DetourManager.cpp  DetourManager.h
OHook/Features/: AimFeatures.cpp  AimFeatures.h  PlayerFeatures.cpp  PlayerFeatures.h
OHook/Handlers/: ActorCache.cpp  ActorCache.h  ComponentLogger.h
OHook/Misc/: SDKExt.h  Utils.h  signatures.h
OHook/Overlays/: ESP.cpp  ESP.h  GolfOverlay.cpp  GolfOverlay.h
OHook/Overlays/Modules/: ESP_VisualSettings.h  Fentry_Settings.h  Player_ModSettings.h
RendererHook/: OverlayBase.cpp  OverlayBase.h
RendererHook/Windows/: DX12Hook.cpp
console/: console.cpp  console.hpp
